style.css
/* ... */
.benefit {
    background: #fff;
    border: 1px solid #ddd;
    border-radius: 10px;
    padding: 20px;
    width: 300px;
    text-align: center;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}

.benefit i {
    color: #404a54;
    margin-bottom: 10px;
}

.benefit h3 {
    font-size: 1.5em;
    color: #333;
    margin-bottom: 10px;
}

.benefit p {
    font-size: 1em;
    color: #666;
}

/* Services */
.services {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 20px;
    margin-top: 10px;
    margin-bottom: 30px;
}

.service {
    background: #1e293b;
    border: 1px solid;
    border-radius: 10px;
    padding: 20px;
    width: 300px;
    text-align: center;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}

.service i {
    color: #fff;
    margin-bottom: 10px;
}

.service h3 {
    font-size: 1em;
    color: #fff;
    margin-bottom: 10px;
}

.service p {
    font-size: 1em;
    color: #fff;
}

/* About Image */
.about-section {
    padding: 80px 20px;
    background-color: #f8f9fa;
}

.about-content {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-items: center;
    max-width: 1000px;
    margin: 0 auto;
}

.about-image {
    min-width: 300px;
    position: relative;
    padding: 20px;
}

.about-image img {
    width: 350px;
    height: 350px;
    border-radius: 50%;
    object-fit: cover;
    border: 5px solid #fff;
    box-shadow: 0 0 10px rgba(0,0,0,0.1);
    z-index: 2;
}

.about-text {
    min-width: 300px;
    background-color: #fff;
    padding: 40px 20px;
    box-shadow: 0 0 10px rgba(0,0,0,0.05);
}

.about-body{
    margin-bottom: 10px;
    font-size: 1.2rem;
    padding: 10px 15px;
    border-radius: 5px;
    line-height: 1.6;
}

/* Cookie Banner */
.cookie-banner {
    position: fixed;
    bottom: 0;
    width: 100%;
    background-color: rgba(0, 0, 0, 0.9);
    color: #ffffff;
    text-align: center;
    padding: 1rem;
    z-index: 1000;
    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
}

.cookie-banner p {
    font-size: 0.7rem;
    margin: 0;
}

.cookie-actions {
    display: flex;
    gap: 0.5rem;
}

.cookie-btn {
    padding: 0.5rem 1rem;
    border: none;
    border-radius: 4px;
    font-size: 0.8rem;
    cursor: pointer;
    transition: background-color 0.3s ease;
}

.cookie-btn.accept {
    background-color: #447b46;
    color: white;
}

.cookie-btn.accept:hover {
    background-color: #2b752a;
}

.cookie-btn.decline {
    background-color: #904b46;
    color: white;
}

.cookie-btn.decline:hover {
    background-color: #83201e;
}

.hidden {
    display: none;
}


/* Contact Section */
#contact-form {
    width: 100%;
    max-width: 600px; /* Ensures the form doesn't get too wide on large screens */
    margin: 0 auto;
    box-sizing: border-box; /* Includes padding in width/height calculation */
}
@media (max-width: 768px) {
    #contact-form {
        max-width: 400px;
        width: 80%;
    }
}
.form-group {
    position: relative;
    margin-bottom: 30px;
}

.form-group input,
.form-group textarea {
    width: 100%;
    padding: 10px;
    border: 1px solid #ccc;
    border-radius: 5px;
    font-size: 1em;
    background: none;
    color: #333;
    resize: none;
}

.form-group label {
    position: absolute;
    top: 10px;
    left: 10px;
    font-size: 1em;
    color: #aaa;
    pointer-events: none;
    transition: all 0.3s;
}

input::placeholder,
textarea::placeholder {
    font-family: 'Helvetica Neue', Arial, sans-serif; /* Use your desired font */
    font-size: 1em; /* Ensure consistent font size */
    color: #aaa; /* Placeholder text color */
    font-style: italic; /* Optional: Italicized placeholder text for emphasis */
}

.form-group input:focus + label,
.form-group input:not(:placeholder-shown) + label,
.form-group textarea:focus + label,
.form-group textarea:not(:placeholder-shown) + label {
    top: -10px;
    left: 5px;
    font-size: 0.85em;
    background-color: #fff; /* Ensure it matches your form's background */
    padding: 0 5px;
}

#contact-form button {
    background-color: #1e293b;
    color: #fff;
    padding: 15px 30px;
    border: none;
    border-radius: 5px;
    font-size: 1em;
    cursor: pointer;
    transition: background-color 0.3s;
}

#contact-form button:hover {
    background-color: #fcdc4d;
    color: #1e293b;
}

/* Recommendations Section */
.recommendations-section {
    padding: 80px 20px;
    background-color: #fff;
    text-align: center;
}

.carousel-container {
    display: flex;
    align-items: center;
    justify-content: center;
    max-width: 800px;
    margin: 0 auto;
}

.carousel-container .prev,
.carousel-container .next {
    cursor: pointer;
    font-size: 3em;
    color: #ffffff;
    margin: 0 15px;
    user-select: none;
}

.carousel-container .prev:hover,
.carousel-container .next:hover {
    color: #fcdc4d;
}

.carousel {
    flex: 1;
    position: relative; /* Keep position relative if needed */
}

.carousel-item {
    opacity: 0;
    transition: opacity 1s ease-in-out;
    /* Optional: Add visibility and height for smoother transitions */
    visibility: hidden;
    height: 0;
    overflow: hidden;
    transition: opacity 1s ease-in-out, visibility 1s, height 1s;
}

.carousel-item.active {
    opacity: 1;
    visibility: visible;
    height: auto;
}

.carousel-item .quote {
    font-size: 1.2em;
    font-style: italic;
    margin-bottom: 20px;
}

.carousel-item .name {
    font-weight: bold;
    display: flex;
    align-items: center;
    justify-content: center;
}

.carousel-item .name img {
    width: 24px;
    height: auto;
    margin-left: 10px;
}

